# clion-sandbox

./: README.md
sandbox/: CMakeLists.txt
sandbox/include/: confirm_quit.h  main_menu.h
sandbox/include/data/: CharacterData.h  WorldData.h
sandbox/include/ui/: ConfirmState.h  EmbarkState.h  GameMenuState.h  MainMenuState.h  NavigationState.h  NeutralState.h  Utility.h  utility.h
sandbox/include/world/: Character.h  World.h
sandbox/src/: confirm_quit.cpp  main.cpp  main_menu.cpp  utility.cpp
sandbox/src/data/: WorldData.cpp
sandbox/src/ui/: ConfirmState.cpp  EmbarkState.cpp  GameMenuState.cpp  MainMenuState.cpp  NavigationState.cpp  NeutralState.cpp  Utility.cpp  confirm_quit.cpp  main_menu.cpp  utility.cpp
sandbox/src/world/: World.cpp
